k8s/30-task-manager-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: task-manager
  namespace: task-manager
  labels:
    app: task-manager

spec:
  replicas: 2

  selector:
    matchLabels:
      app: task-manager

  template:
    metadata:
      labels:
        app: task-manager

    spec:
      containers:
        - name: api
          image: pleszkoi/devops-task-manager:0.3.1
          ports:
            - containerPort: 8000
          readinessProbe:
            httpGet:
              path: /ready
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 2
            failureThreshold: 3

          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3
