k8s/volume-test.yaml
apiVersion: v1
kind: Pod

metadata:
  name: volume-test
  namespace: task-manager

spec:
  containers:
    - name: test
      image: busybox
      command: ["sleep", "3600"]

      volumeMounts:
        - mountPath: /data
          name: test-storage

  volumes:
    - name: test-storage
      persistentVolumeClaim:
        claimName: postgres-data
