k8s/31-task-manager-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: task-manager
  namespace: task-manager

spec:
  type: ClusterIP

  selector:
    app: task-manager

  ports:
    - port: 80
      targetPort: 8000
