k8s/42-postgres-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: postgres
  namespace: task-manager

spec:
  type: ClusterIP

  selector:
    app: postgres

  ports:
    - port: 5432
      targetPort: 5432
