k8s/44-postgres-service-headless.yaml
apiVersion: v1
kind: Service

metadata:
  name: postgres
  namespace: task-manager

spec:
  clusterIP: None
  selector:
    app: postgres

  ports:
    - port: 5432
      targetPort: 5432
