k8s/50-task-manager-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: task-manager
  namespace: task-manager

spec:
  tls:
    - hosts:
        - api.localhost
      secretName: task-manager-tls

  rules:
    - host: api.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: task-manager
                port:
                  number: 80
